# volunteer_village

./: .gitignore  Dockerfile  cert.pem  docker-compose.yml  key.pem  pyproject.toml
src/: config.py  main.py
src/static/css/: login.css  organiser.css  style.css  tools.css
src/static/js/: org.js  signup2.js  tools.js
src/templates/: Organiser.html  index.html  login.html  signup2.html  tools.html
volunteer_village/: __init__.py  config.py  db.py  main.py
volunteer_village/static/css/: about.css  chat.css  error.css  login.css  organiser.css  profile.css  signup2.css  style.css  tools.css
volunteer_village/static/js/: login.js  nav.js  org.js  profile.js  signup2.js  tools.js
volunteer_village/templates/: About.html  Organiser.html  chatting.html  error.html  index.html  login.html  profile.html  signup2.html  tools.html
