[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["parrothacker1 <rajeevgoutham1@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
